Avoid use of Integer(int) constructor deprecated in Java 9